# fairplay-crypto-godot

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  PRD.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  project.godot
.github/workflows/: ci.yml  docs.yml  release.yml
addons/manamesh_fairplay/: manamesh_fairplay.gdextension  manamesh_fairplay.gdextension.uid  plugin.cfg
addons/manamesh_fairplay/facade/: fair_play.gd  fair_play.gd.uid
docs/: api.md  building.md  changelog.md  commit-reveal.md  getting-started.md  godot-integration.md  index.md  integration-byo-netcode.md  mental-poker.md  netcode.md  platform-matrix.md  platforms.md  threat-model.md
docs/algorithms/: commit-reveal.md  sra-mental-poker.md
docs/research/: crypto-stack.md  gdextension-web.md  platform-constraints.md  toolchain.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/manamesh_fairplay_core/: Cargo.toml
rust/manamesh_fairplay_core/src/: commitment.rs  error.rs  hashing.rs  hexutil.rs  keychain.rs  lib.rs  merkle.rs  secp.rs  shuffle.rs  sra.rs  transport.rs  wire.rs
rust/manamesh_fairplay_godot/: Cargo.toml
rust/manamesh_fairplay_godot/src/: lib.rs
samples/dice_commit_reveal/: dice_commit_reveal.gd  dice_commit_reveal.gd.uid  dice_commit_reveal.tscn
samples/multiplayer_dice/: multiplayer_dice.gd  multiplayer_dice.gd.uid  multiplayer_dice.tscn
scripts/: build_web.sh  smoke_desktop.gd  smoke_desktop.gd.uid
