[package]
name = "manamesh_fairplay_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-agnostic fair-play crypto core (SRA, keychain, commit-reveal, Merkle)"
publish = false

[dependencies]
secp256k1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
