[package]
name = "manamesh_fairplay_godot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Godot 4 GDExtension bindings for ManaMesh FairPlay"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Single-threaded web export (Godot 4.3+ "Thread Support" off)
nothreads = ["godot/experimental-wasm-nothreads"]

[dependencies]
manamesh_fairplay_core = { workspace = true }
godot = { workspace = true }
hex = { workspace = true }
